--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,25 +3,26 @@
     <h1><%= @list.name %> Movies</h1> 
   </div>
 
-<% @list.movies.each do |movie| %>
+<div class="container d-flex">
+  <% @list.movies.each do |movie| %>
   <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src=<%= movie.poster_url %> alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title"><%= movie.title %></h5>
-      <p class="card-text"><%= movie.overview %></p>
+      <img class="card-img-top" src=<%= movie.poster_url %> alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title"><%= movie.title %></h5>
+        <p class="card-text"><%= movie.overview %></p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><%= movie.rating %></li>
+        <li class="list-group-item"><% @list.bookmarks.each do |bookmark| %>
+        <%= bookmark.comment %>
+        <% end %>
+        </li>
+        <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+        <li class="list-group-item"><%= link_to "Delete", bookmark_path(bookmark), method: :delete %></li>
+      </ul>
     </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item"><%= movie.rating %></li>
-      <li class="list-group-item"><% @list.bookmarks.each do |bookmark| %>
-      <%= bookmark.comment %>
-      <% end %>
-      </li>
-      <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
-      <li class="list-group-item"><%= link_to "Delete", bookmark_path(bookmark), method: :delete %></li>
-    </ul>
-  </div>
-  <% end %>
+ <% end %>
+</div>
   <div class="mt-4 mb-5">
     <%= link_to "Add bookmark", new_list_bookmark_path(@list), class: "pt-3" %>
   </div>
-</div>
